# LabsRepository

./: .gitignore  CMakeLists.txt  README.md  lab17.cpp  lab2.h  lab7.cpp  labs_executor.hpp  labs_lis.txt
labs/: lab12.cpp  lab12.h  lab17.cpp  lab17.h  lab2.cpp  lab22.cpp  lab22.h  lab27.cpp  lab27.h  lab32.cpp  lab32.h  lab37.cpp  lab37.h  lab7.cpp  lab7.h  labs_executor.hpp  main.cpp  matplotlibcpp.h
py-labs/: lab1.py
